	  prelink project

2015-10-28   Mark Hatle <mark.hatle@windriver.com>
	* get.c: Sync rtld/prelink type_class values

2015-10-22   Mark Hatle <mark.hatle@windriver.com>
	* Upstream project appears to have been abandoned
	* Update the project to remove the SVN like 'trunk' dir
	* Adjust the AUTHORS file
	* Move the previous ChangeLog to ChangeLog.1

 2015-10-21   Mark Hatle <mark.hatle@windriver.com>
	* Resync src/rtld to glibc-2.22
	* get.c, prelink.h: Add symname to conflict structure
	* conflict.c: Provide more debuggign on a conflict (symname)

2015-09-11   Mark Hatle <mark.hatle@windriver.com>
	* doc/prelink.8: Add --ld-preload docs
	* testsuite/Maekfile.am, testsuite/preload1*: Add test

2015-09-11   Vaneet Narang <v.narang@samsung.com>
	* src/gather.c, src/get.c, src/main.c, src/prelink.h:
	Add ability to specify preloaded libraries that influence the
	prelinker.

2015-09-09   Akhilesh Kumar <akhilesh.k@samsung.com>
	* src/gather.c: Remove unnecessary dso NULL check

2015-09-09   Maninder Singh <maninder1.s@samsung.com>
	* src/doit.c, src/gather.c, src/undoall.c: Fix realloc memory leak

2015-09-07  Andrew Stubbs  <ams@codesourcery.com>
	* src/arch-arm.c (PL_ARCH(arm)): Set max_page_size to match
	the new BFD default.

2015-03-31  Mark Hatle <mark.hatle@windriver.com>
        * Based on submission by Maninder Singh <maninder1.s@samsung.com>
          src/get.c: Remove extra check for ld-linux.so.3 in strcmp
          (remove first entry, second is already in upstream code)

2014-12-10  Mark Hatle <mark.hatle@windriver.com>
        * testsuite/Makefile.am: latest autotools has changed the 
	  way TEST_ENVIRONMENT is defined.  Remove the $(SHELL)

2014-12-09  Jon Masters <jcm@jonmasters.org>
	    Mark Hatle  <mark.hatle@windriver.com>
	* src/arch-arm.c: Remove support for OABI arm ld-linux.so.2
			  Add support for hard float ld-linux-armhf.so.3

2014-08-13  Kyle McMartin  <kmcmartin@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>