@@ -29,8 +29,7 @@
 	* Adjust the AUTHORS file
 	* Move the previous ChangeLog to ChangeLog.1
 
- 2015-10-21   Mark Hatle <mark.hatle@windriver.com>
-	* Resync src/rtld to glibc-2.22
+2015-10-21   Mark Hatle <mark.hatle@windriver.com>
 	* get.c, prelink.h: Add symname to conflict structure
 	* conflict.c: Provide more debuggign on a conflict (symname)
 
@@ -52,6 +51,10 @@
 2015-09-07  Andrew Stubbs  <ams@codesourcery.com>
 	* src/arch-arm.c (PL_ARCH(arm)): Set max_page_size to match
 	the new BFD default.
+
+2015-04-06  Mark Hatle <mark.hatle@windriver.com>
+           Maninder Singh <maninder1.s@samsung.com>
+        * src/gather.c: Return rtld error messages on failure
 
 2015-03-31  Mark Hatle <mark.hatle@windriver.com>
         * Based on submission by Maninder Singh <maninder1.s@samsung.com>
